// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A Melodies test suite should generate melodies based on a movement timeline - free rhythm 1`] = `
Array [
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 73,
    "next": 240,
    "note": "C#4",
    "time": 0,
  },
  Object {
    "dur": 720,
    "isRest": false,
    "midi": 71,
    "next": 960,
    "note": "B3",
    "time": 240,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 73,
    "next": 1440,
    "note": "C#4",
    "time": 960,
  },
  Object {
    "dur": 720,
    "isRest": false,
    "midi": 64,
    "next": 2160,
    "note": "E3",
    "time": 1440,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 64,
    "next": 2640,
    "note": "E3",
    "time": 2160,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 61,
    "next": 2880,
    "note": "C#3",
    "time": 2640,
  },
  Object {
    "dur": 720,
    "isRest": false,
    "midi": 69,
    "next": 3600,
    "note": "A3",
    "time": 2880,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 71,
    "next": 3840,
    "note": "B3",
    "time": 3600,
  },
  Object {
    "dur": 720,
    "isRest": false,
    "midi": 78,
    "next": 4560,
    "note": "Gb4",
    "time": 3840,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 78,
    "next": 5040,
    "note": "Gb4",
    "time": 4560,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 75,
    "next": 5280,
    "note": "Eb4",
    "time": 5040,
  },
  Object {
    "dur": 720,
    "isRest": false,
    "midi": 64,
    "next": 6000,
    "note": "E3",
    "time": 5280,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 64,
    "next": 6480,
    "note": "E3",
    "time": 6000,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 61,
    "next": 6720,
    "note": "Db3",
    "time": 6480,
  },
  Object {
    "dur": 720,
    "isRest": false,
    "midi": 63,
    "next": 7440,
    "note": "Eb3",
    "time": 6720,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 64,
    "next": 7680,
    "note": "E3",
    "time": 7440,
  },
]
`;

exports[`A Melodies test suite should generate melodies based on a movement timeline - turn rhythm 1`] = `
Array [
  Object {
    "dur": 320,
    "isRest": false,
    "midi": 73,
    "next": 320,
    "note": "C#4",
    "time": 0,
  },
  Object {
    "dur": 160,
    "isRest": false,
    "midi": 71,
    "next": 480,
    "note": "B3",
    "time": 320,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 73,
    "next": 960,
    "note": "C#4",
    "time": 480,
  },
  Object {
    "dur": 160,
    "isRest": false,
    "midi": 64,
    "next": 1120,
    "note": "E3",
    "time": 960,
  },
  Object {
    "dur": 80,
    "isRest": false,
    "midi": 64,
    "next": 1200,
    "note": "E3",
    "time": 1120,
  },
  Object {
    "dur": 720,
    "isRest": false,
    "midi": 61,
    "next": 1920,
    "note": "C#3",
    "time": 1200,
  },
  Object {
    "dur": 160,
    "isRest": false,
    "midi": 71,
    "next": 2080,
    "note": "B3",
    "time": 1920,
  },
  Object {
    "dur": 80,
    "isRest": false,
    "midi": 71,
    "next": 2160,
    "note": "B3",
    "time": 2080,
  },
  Object {
    "dur": 720,
    "isRest": false,
    "midi": 68,
    "next": 2880,
    "note": "Ab3",
    "time": 2160,
  },
  Object {
    "dur": 160,
    "isRest": false,
    "midi": 66,
    "next": 3040,
    "note": "Gb3",
    "time": 2880,
  },
  Object {
    "dur": 80,
    "isRest": false,
    "midi": 66,
    "next": 3120,
    "note": "Gb3",
    "time": 3040,
  },
  Object {
    "dur": 720,
    "isRest": false,
    "midi": 63,
    "next": 3840,
    "note": "Eb3",
    "time": 3120,
  },
  Object {
    "dur": 160,
    "isRest": false,
    "midi": 64,
    "next": 4000,
    "note": "E3",
    "time": 3840,
  },
  Object {
    "dur": 80,
    "isRest": false,
    "midi": 64,
    "next": 4080,
    "note": "E3",
    "time": 4000,
  },
  Object {
    "dur": 720,
    "isRest": false,
    "midi": 61,
    "next": 4800,
    "note": "Db3",
    "time": 4080,
  },
  Object {
    "dur": 160,
    "isRest": false,
    "midi": 64,
    "next": 4960,
    "note": "E3",
    "time": 4800,
  },
  Object {
    "dur": 80,
    "isRest": false,
    "midi": 64,
    "next": 5040,
    "note": "E3",
    "time": 4960,
  },
  Object {
    "dur": 720,
    "isRest": false,
    "midi": 61,
    "next": 5760,
    "note": "Db3",
    "time": 5040,
  },
  Object {
    "dur": 160,
    "isRest": false,
    "midi": 68,
    "next": 5920,
    "note": "G#3",
    "time": 5760,
  },
  Object {
    "dur": 80,
    "isRest": false,
    "midi": 68,
    "next": 6000,
    "note": "G#3",
    "time": 5920,
  },
  Object {
    "dur": 720,
    "isRest": false,
    "midi": 64,
    "next": 6720,
    "note": "E3",
    "time": 6000,
  },
  Object {
    "dur": 160,
    "isRest": false,
    "midi": 66,
    "next": 6880,
    "note": "Gb3",
    "time": 6720,
  },
  Object {
    "dur": 80,
    "isRest": false,
    "midi": 66,
    "next": 6960,
    "note": "Gb3",
    "time": 6880,
  },
  Object {
    "dur": 720,
    "isRest": false,
    "midi": 63,
    "next": 7680,
    "note": "Eb3",
    "time": 6960,
  },
]
`;

exports[`A Melodies test suite should generate progression with defined structures 1`] = `
Array [
  Object {
    "dur": 320,
    "isRest": true,
    "midi": -1,
    "next": 320,
    "note": "",
    "time": 0,
  },
  Object {
    "dur": 160,
    "isRest": false,
    "midi": 61,
    "next": 480,
    "note": "Db3",
    "time": 320,
  },
  Object {
    "dur": 360,
    "isRest": false,
    "midi": 60,
    "next": 840,
    "note": "C3",
    "time": 480,
  },
  Object {
    "dur": 120,
    "isRest": true,
    "midi": -1,
    "next": 960,
    "note": "",
    "time": 840,
  },
  Object {
    "dur": 360,
    "isRest": false,
    "midi": 67,
    "next": 1320,
    "note": "G3",
    "time": 960,
  },
  Object {
    "dur": 120,
    "isRest": true,
    "midi": -1,
    "next": 1440,
    "note": "",
    "time": 1320,
  },
  Object {
    "dur": 360,
    "isRest": false,
    "midi": 74,
    "next": 1800,
    "note": "D4",
    "time": 1440,
  },
  Object {
    "dur": 120,
    "isRest": true,
    "midi": -1,
    "next": 1920,
    "note": "",
    "time": 1800,
  },
  Object {
    "dur": 360,
    "isRest": false,
    "midi": 72,
    "next": 2280,
    "note": "C4",
    "time": 1920,
  },
  Object {
    "dur": 120,
    "isRest": true,
    "midi": -1,
    "next": 2400,
    "note": "",
    "time": 2280,
  },
  Object {
    "dur": 360,
    "isRest": false,
    "midi": 72,
    "next": 2760,
    "note": "C4",
    "time": 2400,
  },
  Object {
    "dur": 120,
    "isRest": true,
    "midi": -1,
    "next": 2880,
    "note": "",
    "time": 2760,
  },
  Object {
    "dur": 360,
    "isRest": false,
    "midi": 75,
    "next": 3240,
    "note": "Eb4",
    "time": 2880,
  },
  Object {
    "dur": 120,
    "isRest": true,
    "midi": -1,
    "next": 3360,
    "note": "",
    "time": 3240,
  },
  Object {
    "dur": 360,
    "isRest": false,
    "midi": 74,
    "next": 3720,
    "note": "D4",
    "time": 3360,
  },
  Object {
    "dur": 120,
    "isRest": true,
    "midi": -1,
    "next": 3840,
    "note": "",
    "time": 3720,
  },
]
`;
